env/k8s/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: chat-app-server-service
            port:
              number: 80
